downloads from gogoledrive

--- a/handicap_backtester.ipynb
+++ b/handicap_backtester.ipynb
@@ -24,7 +24,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "odds_df=pd.read_csv(\"cleaned_all.csv\")\n"
+    "import gdown\n",
+    "import pandas as pd\n",
+    "\n",
+    "# File ID from Google Drive\n",
+    "file_id = '1eJfCer2tdxDrgINTxhtDk8i4mrJh3ZO7'  # Replace with your actual file ID\n",
+    "\n",
+    "# Direct download URL\n",
+    "direct_link = f'https://drive.google.com/uc?id={file_id}&export=download'\n",
+    "\n",
+    "# Output filename\n",
+    "output_file = 'cleaned_all.csv'  # Name the file as you wish\n",
+    "\n",
+    "# Download the file using gdown\n",
+    "gdown.download(direct_link, output_file, quiet=False)\n",
+    "\n",
+    "# Load the CSV into a DataFrame\n",
+    "odds_df = pd.read_csv(output_file)\n",
+    "\n",
+    "# Display the first few rows to verify\n",
+    "print(odds_df.head())\n"
    ]
   },
   {
