--- a/model-ev-graph.ipynb
+++ b/model-ev-graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,17 +15,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Load your data\n",
-    "odds_df = pd.read_csv(\"cleaned_all.csv\")\n"
+    "import gdown\n",
+    "import pandas as pd\n",
+    "\n",
+    "# File ID from Google Drive\n",
+    "file_id = '1eJfCer2tdxDrgINTxhtDk8i4mrJh3ZO7'  # Replace with your actual file ID\n",
+    "\n",
+    "# Direct download URL\n",
+    "direct_link = f'https://drive.google.com/uc?id={file_id}&export=download'\n",
+    "\n",
+    "# Output filename\n",
+    "output_file = 'cleaned_all.csv'  # Name the file as you wish\n",
+    "\n",
+    "# Download the file using gdown\n",
+    "gdown.download(direct_link, output_file, quiet=False)\n",
+    "\n",
+    "# Load the CSV into a DataFrame\n",
+    "odds_df = pd.read_csv(output_file)\n",
+    "\n",
+    "# Display the first few rows to verify\n",
+    "print(odds_df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gdown\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Google Drive file ID\n",
+    "file_id = '1A2B3C4D5E6F7G8H9I0J1K2L3M4N5O6P7'\n",
+    "\n",
+    "# Direct download URL\n",
+    "direct_link = f'https://drive.google.com/uc?id={file_id}&export=download'\n",
+    "\n",
+    "# Download the file\n",
+    "output = 'cleaned_all.csv'  # Local filename\n",
+    "gdown.download(direct_link, output, quiet=False)\n",
+    "\n",
+    "# Load the data into a DataFrame\n",
+    "odds_df = pd.read_csv(output)\n",
+    "\n",
+    "# Display the first few rows to verify\n",
+    "print(odds_df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
