--- a/model-ev-graph.ipynb
+++ b/model-ev-graph.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,43 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File 'cleaned_all.csv' already exists locally.\n",
-      "  Period  Clock   Score  Home Odds  Handicap  Away Odds            Status  \\\n",
-      "0    4th  03:05  120-92       0.95     -26.5       0.80  Early, Live, Run   \n",
-      "1    4th  03:17  117-92       0.76     -23.5       1.00  Early, Live, Run   \n",
-      "2    4th  03:31  117-92       0.80     -23.5       0.95  Early, Live, Run   \n",
-      "3    4th  03:31  117-92       0.68     -23.5       1.15  Early, Live, Run   \n",
-      "4    4th  03:32  117-92       0.90     -23.5       0.83  Early, Live, Run   \n",
-      "\n",
-      "     Day Update              Type  ... wins_q4_perm  ties_q4_perm  \\\n",
-      "0  30-03  16:43  handicap_odds_q4  ...          NaN           NaN   \n",
-      "1  30-03  16:43  handicap_odds_q4  ...          NaN           NaN   \n",
-      "2  30-03  16:41  handicap_odds_q4  ...          NaN           NaN   \n",
-      "3  30-03  16:40  handicap_odds_q4  ...          NaN           NaN   \n",
-      "4  30-03  16:40  handicap_odds_q4  ...          NaN           NaN   \n",
-      "\n",
-      "  losses_q4_perm  Optimal Handicap.1 Handicap Derivatives.1  \\\n",
-      "0            NaN                 NaN                    NaN   \n",
-      "1            NaN                 NaN                    NaN   \n",
-      "2            NaN                 NaN                    NaN   \n",
-      "3            NaN                 NaN                    NaN   \n",
-      "4            NaN                 NaN                    NaN   \n",
-      "\n",
-      "  Derivative Quarter Model Home Winrate Model Away Winrate Home EV  Away EV  \n",
-      "0                NaN                NaN                NaN     NaN      NaN  \n",
-      "1                NaN                NaN                NaN     NaN      NaN  \n",
-      "2                NaN                NaN                NaN     NaN      NaN  \n",
-      "3                NaN                NaN                NaN     NaN      NaN  \n",
-      "4                NaN                NaN                NaN     NaN      NaN  \n",
-      "\n",
-      "[5 rows x 138 columns]\n"
+      "File 'cleaned_all.csv' already exists locally.\n"
      ]
     }
    ],
@@ -89,12 +60,12 @@
     "odds_df = pd.read_csv(filename)\n",
     "\n",
     "# Display the first few rows to verify\n",
-    "print(odds_df.head())\n"
+    "#print(odds_df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,13 +121,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fd52958016a4df1aa1011566937eafa",
+       "model_id": "e7a0061036a249baab15922ca4cdeb94",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +135,7 @@
        "interactive(children=(FloatSlider(value=0.0, continuous_update=False, description='EV Threshold:', max=1.0, mi…"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
