removed big prints

--- a/handicap_backtester.ipynb
+++ b/handicap_backtester.ipynb
@@ -312,8 +312,8 @@
     "    plt.show()\n",
     "\n",
     "    # Display the bets DataFrame\n",
-    "    print(\"\\nBets Details:\")\n",
-    "    print(bets_df.to_string(index=False))\n",
+    "    #print(\"\\nBets Details:\")\n",
+    "    #print(bets_df.to_string(index=False))\n",
     "    \n",
     "    return bets_df\n"
    ]
