--- a/handicap_backtester.ipynb
+++ b/handicap_backtester.ipynb
@@ -320,38 +320,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a7d50629e3d74e48b921be931f964039",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(FloatSlider(value=0.0, continuous_update=False, description='Min EV:', layout=Layout(width='500…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b57e24ee11f484dbe7b8f8a2afcb351",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -363,7 +334,8 @@
     "odds_df = pd.read_csv(\"cleaned_all.csv\")\n",
     "\n",
     "# Create a layout for the sliders\n",
-    "slider_layout = widgets.Layout(width='500px', description_width='150px')\n",
+    "slider_layout = widgets.Layout(width='500px', description_width='200px')\n",
+    "style = {'description_width': 'initial'}\n",
     "\n",
     "# Create widgets for each parameter\n",
     "min_ev_slider = widgets.FloatSlider(\n",
@@ -373,7 +345,8 @@
     "    step=0.01,\n",
     "    description='Min EV:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "max_ev_slider = widgets.FloatSlider(\n",
@@ -383,7 +356,8 @@
     "    step=0.01,\n",
     "    description='Max EV:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "bet_amount_slider = widgets.IntSlider(\n",
@@ -393,7 +367,8 @@
     "    step=100,\n",
     "    description='Bet Amount:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "game_max_slider = widgets.IntSlider(\n",
@@ -403,7 +378,8 @@
     "    step=500,\n",
     "    description='Game Max:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "min_samplesize_slider = widgets.IntSlider(\n",
@@ -413,7 +389,8 @@
     "    step=10,\n",
     "    description='Min Model Sample:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "max_samplesize_slider = widgets.IntSlider(\n",
@@ -423,7 +400,8 @@
     "    step=1000,\n",
     "    description='Max Model Sample:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "initial_bankroll_slider = widgets.IntSlider(\n",
@@ -433,7 +411,8 @@
     "    step=5000,\n",
     "    description='Start Bankroll:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "cooldown_slider = widgets.IntSlider(\n",
@@ -443,19 +422,22 @@
     "    step=10,\n",
     "    description='Cooldown (s):',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "q2_toggle = widgets.Checkbox(\n",
     "    value=False,\n",
     "    description='Consider Q2 Bets',\n",
-    "    disabled=False\n",
+    "    disabled=False,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "q4_toggle = widgets.Checkbox(\n",
     "    value=True,\n",
     "    description='Consider Q4 Bets',\n",
-    "    disabled=False\n",
+    "    disabled=False,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "handicap_range_slider = widgets.IntRangeSlider(\n",
@@ -465,7 +447,8 @@
     "    step=1,\n",
     "    description='Current Spread:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "pregame_spread_range_slider = widgets.IntRangeSlider(\n",
@@ -475,7 +458,8 @@
     "    step=1,\n",
     "    description='Pregame Spread:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "score_diff_range_slider = widgets.IntRangeSlider(\n",
@@ -485,7 +469,8 @@
     "    step=1,\n",
     "    description='Score Diff:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "time_left_range_slider = widgets.IntRangeSlider(\n",
@@ -495,7 +480,8 @@
     "    step=1,\n",
     "    description='Time Left:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "# Additional widgets for sample size and random state\n",
@@ -506,7 +492,8 @@
     "    step=0.01,\n",
     "    description='Sample %:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "random_state_slider = widgets.IntSlider(\n",
@@ -516,7 +503,8 @@
     "    step=1,\n",
     "    description='Seed:',\n",
     "    continuous_update=False,\n",
-    "    layout=slider_layout\n",
+    "    layout=slider_layout,\n",
+    "    style = style\n",
     ")\n",
     "\n",
     "# Function to run the simulation\n",
