log is optional now

--- a/handicap_backtester.ipynb
+++ b/handicap_backtester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,8 @@
     "    handicap_range: tuple = (-10, 10),\n",
     "    pregame_spread_range: tuple = (-15, 15),\n",
     "    score_diff_range: tuple = (-20, 20),\n",
-    "    time_left_range: tuple = (0, 48)\n",
+    "    time_left_range: tuple = (0, 48),\n",
+    "    print_logs = False\n",
     ") -> pd.DataFrame:\n",
     "    bankroll = initial_bankroll\n",
     "    total_wagered = 0\n",
@@ -292,7 +293,7 @@
     "    plt.ylabel('Bankroll ($)')\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
-    "\n",
+    "    '''\n",
     "    # Plot Bankroll for H1\n",
     "    plt.figure(figsize=(12, 6))\n",
     "    plt.plot(bankroll_over_time_h1, marker='o', linestyle='-', color='r')\n",
@@ -301,7 +302,8 @@
     "    plt.ylabel('Bankroll ($)')\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
-    "\n",
+    "    '''\n",
+    "    '''\n",
     "    # Plot Bankroll for Q4\n",
     "    plt.figure(figsize=(12, 6))\n",
     "    plt.plot(bankroll_over_time_q4, marker='o', linestyle='-', color='g')\n",
@@ -310,23 +312,25 @@
     "    plt.ylabel('Bankroll ($)')\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
-    "\n",
+    "    '''\n",
     "    # Display the bets DataFrame\n",
-    "    #print(\"\\nBets Details:\")\n",
-    "    #print(bets_df.to_string(index=False))\n",
+    "    if (print_logs == True):\n",
+    "        \n",
+    "        print(\"\\nBets Details:\")\n",
+    "        print(bets_df.to_string(index=False))\n",
     "    \n",
     "    return bets_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "600dd854d15343698e828817eba32116",
+       "model_id": "e6cba1cc633b4364974ba03cf93c5f95",
        "version_major": 2,
        "version_minor": 0
       },
@@ -340,7 +344,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c2447fc090d04779b2fb30628d7c77c5",
+       "model_id": "3a9b990c7a3448028cc7a9a30ee4326f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -455,20 +459,6 @@
     "    style = style\n",
     ")\n",
     "\n",
-    "q2_toggle = widgets.Checkbox(\n",
-    "    value=False,\n",
-    "    description='Consider Q2 Bets',\n",
-    "    disabled=False,\n",
-    "    style = style\n",
-    ")\n",
-    "\n",
-    "q4_toggle = widgets.Checkbox(\n",
-    "    value=True,\n",
-    "    description='Consider Q4 Bets',\n",
-    "    disabled=False,\n",
-    "    style = style\n",
-    ")\n",
-    "\n",
     "handicap_range_slider = widgets.IntRangeSlider(\n",
     "    value=(-30, 30),\n",
     "    min=-30,\n",
@@ -536,10 +526,31 @@
     "    style = style\n",
     ")\n",
     "\n",
+    "\n",
+    "q2_toggle = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Consider Q2 Bets',\n",
+    "    disabled=False,\n",
+    "    style = style\n",
+    ")\n",
+    "\n",
+    "q4_toggle = widgets.Checkbox(\n",
+    "    value=True,\n",
+    "    description='Consider Q4 Bets',\n",
+    "    disabled=False,\n",
+    "    style = style\n",
+    ")\n",
+    "print_logs = widgets.Checkbox(\n",
+    "    value=False,\n",
+    "    description='Print Game Logs',\n",
+    "    disabled=False,\n",
+    "    style = style\n",
+    ")\n",
+    "\n",
     "# Function to run the simulation\n",
     "def run_simulation(min_ev, max_ev, bet_amount, game_max, min_samplesize, max_samplesize,\n",
     "                   initial_bankroll, cooldown, q2, q4, handicap_range, pregame_spread_range,\n",
-    "                   score_diff_range, time_left_range, sample_size, random_state):\n",
+    "                   score_diff_range, time_left_range, sample_size, random_state, print_logs):\n",
     "\n",
     "    # Sample the data\n",
     "    odds_df_sample = odds_df.sample(frac=sample_size, random_state=random_state)\n",
@@ -560,7 +571,8 @@
     "        handicap_range=handicap_range,\n",
     "        pregame_spread_range=pregame_spread_range,\n",
     "        score_diff_range=score_diff_range,\n",
-    "        time_left_range=time_left_range\n",
+    "        time_left_range=time_left_range,\n",
+    "        print_logs = print_logs\n",
     "    )\n",
     "    return bets_df\n",
     "\n",
@@ -574,14 +586,15 @@
     "    'max_samplesize': max_samplesize_slider,\n",
     "    'initial_bankroll': initial_bankroll_slider,\n",
     "    'cooldown': cooldown_slider,\n",
-    "    'q2': q2_toggle,\n",
-    "    'q4': q4_toggle,\n",
     "    'handicap_range': handicap_range_slider,\n",
     "    'pregame_spread_range': pregame_spread_range_slider,\n",
     "    'score_diff_range': score_diff_range_slider,\n",
     "    'time_left_range': time_left_range_slider,\n",
     "    'sample_size': sample_size_slider,\n",
-    "    'random_state': random_state_slider\n",
+    "    'random_state': random_state_slider,\n",
+    "    'q2': q2_toggle,\n",
+    "    'q4': q4_toggle,\n",
+    "    'print_logs': print_logs\n",
     "})\n",
     "\n",
     "# Arrange and display the UI components\n",
@@ -594,14 +607,15 @@
     "    max_samplesize_slider,\n",
     "    initial_bankroll_slider,\n",
     "    cooldown_slider,\n",
-    "    q2_toggle,\n",
-    "    q4_toggle,\n",
     "    handicap_range_slider,\n",
     "    pregame_spread_range_slider,\n",
     "    score_diff_range_slider,\n",
     "    time_left_range_slider,\n",
     "    sample_size_slider,\n",
-    "    random_state_slider\n",
+    "    random_state_slider,\n",
+    "    q2_toggle,\n",
+    "    q4_toggle,\n",
+    "    print_logs\n",
     "])\n",
     "\n",
     "# Display the widgets and output\n",
