--- a/handicap_backtester.ipynb
+++ b/handicap_backtester.ipynb
@@ -324,32 +324,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6cba1cc633b4364974ba03cf93c5f95",
+       "model_id": "cd7738ee552444ccb8203ae903518857",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(FloatSlider(value=0.0, continuous_update=False, description='Min EV:', layout=Layout(width='500…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3a9b990c7a3448028cc7a9a30ee4326f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
       ]
      },
      "metadata": {},
@@ -379,7 +365,7 @@
     "    description='Min EV:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "max_ev_slider = widgets.FloatSlider(\n",
@@ -390,7 +376,7 @@
     "    description='Max EV:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "bet_amount_slider = widgets.IntSlider(\n",
@@ -401,7 +387,7 @@
     "    description='Bet Amount:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "game_max_slider = widgets.IntSlider(\n",
@@ -412,7 +398,7 @@
     "    description='Game Max:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "min_samplesize_slider = widgets.IntSlider(\n",
@@ -423,7 +409,7 @@
     "    description='Min Model Sample:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "max_samplesize_slider = widgets.IntSlider(\n",
@@ -434,7 +420,7 @@
     "    description='Max Model Sample:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "initial_bankroll_slider = widgets.IntSlider(\n",
@@ -445,7 +431,7 @@
     "    description='Start Bankroll:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "cooldown_slider = widgets.IntSlider(\n",
@@ -456,7 +442,7 @@
     "    description='Cooldown (s):',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "handicap_range_slider = widgets.IntRangeSlider(\n",
@@ -467,7 +453,7 @@
     "    description='Current Spread:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "pregame_spread_range_slider = widgets.IntRangeSlider(\n",
@@ -478,7 +464,7 @@
     "    description='Pregame Spread:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "score_diff_range_slider = widgets.IntRangeSlider(\n",
@@ -489,7 +475,7 @@
     "    description='Score Diff:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "time_left_range_slider = widgets.IntRangeSlider(\n",
@@ -500,7 +486,7 @@
     "    description='Time Left:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "# Additional widgets for sample size and random state\n",
@@ -512,7 +498,7 @@
     "    description='Sample %:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "random_state_slider = widgets.IntSlider(\n",
@@ -523,79 +509,101 @@
     "    description='Seed:',\n",
     "    continuous_update=False,\n",
     "    layout=slider_layout,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
-    "\n",
     "\n",
     "q2_toggle = widgets.Checkbox(\n",
     "    value=False,\n",
     "    description='Consider Q2 Bets',\n",
     "    disabled=False,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
     "\n",
     "q4_toggle = widgets.Checkbox(\n",
     "    value=True,\n",
     "    description='Consider Q4 Bets',\n",
     "    disabled=False,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
+    "\n",
     "print_logs = widgets.Checkbox(\n",
     "    value=False,\n",
     "    description='Print Game Logs',\n",
     "    disabled=False,\n",
-    "    style = style\n",
+    "    style=style\n",
     ")\n",
+    "\n",
+    "# Button to run the simulation\n",
+    "run_button = widgets.Button(\n",
+    "    description='Run Simulation',\n",
+    "    button_style='primary',  # 'success', 'info', 'warning', 'danger' or ''\n",
+    "    tooltip='Click to run the simulation',\n",
+    "    icon='play'\n",
+    ")\n",
+    "\n",
+    "# Output widget to capture print outputs\n",
+    "output = widgets.Output()\n",
     "\n",
     "# Function to run the simulation\n",
     "def run_simulation(min_ev, max_ev, bet_amount, game_max, min_samplesize, max_samplesize,\n",
     "                   initial_bankroll, cooldown, q2, q4, handicap_range, pregame_spread_range,\n",
     "                   score_diff_range, time_left_range, sample_size, random_state, print_logs):\n",
+    "    \n",
+    "    # Clear the previous output\n",
+    "    output.clear_output()\n",
     "\n",
-    "    # Sample the data\n",
-    "    odds_df_sample = odds_df.sample(frac=sample_size, random_state=random_state)\n",
+    "    with output:\n",
+    "        # Sample the data\n",
+    "        odds_df_sample = odds_df.sample(frac=sample_size, random_state=random_state)\n",
     "\n",
-    "    # Run the betting simulation\n",
-    "    bets_df = simulate_betting(\n",
-    "        df=odds_df_sample,\n",
-    "        min_ev=min_ev,\n",
-    "        max_ev=max_ev,\n",
-    "        bet_amount=bet_amount,\n",
-    "        game_max=game_max,\n",
-    "        min_samplesize=min_samplesize,\n",
-    "        max_samplesize=max_samplesize,\n",
-    "        initial_bankroll=initial_bankroll,\n",
-    "        cooldown=cooldown,\n",
-    "        q2=q2,\n",
-    "        q4=q4,\n",
-    "        handicap_range=handicap_range,\n",
-    "        pregame_spread_range=pregame_spread_range,\n",
-    "        score_diff_range=score_diff_range,\n",
-    "        time_left_range=time_left_range,\n",
-    "        print_logs = print_logs\n",
-    "    )\n",
-    "    return bets_df\n",
+    "        # Run the betting simulation\n",
+    "        bets_df = simulate_betting(\n",
+    "            df=odds_df_sample,\n",
+    "            min_ev=min_ev,\n",
+    "            max_ev=max_ev,\n",
+    "            bet_amount=bet_amount,\n",
+    "            game_max=game_max,\n",
+    "            min_samplesize=min_samplesize,\n",
+    "            max_samplesize=max_samplesize,\n",
+    "            initial_bankroll=initial_bankroll,\n",
+    "            cooldown=cooldown,\n",
+    "            q2=q2,\n",
+    "            q4=q4,\n",
+    "            handicap_range=handicap_range,\n",
+    "            pregame_spread_range=pregame_spread_range,\n",
+    "            score_diff_range=score_diff_range,\n",
+    "            time_left_range=time_left_range,\n",
+    "            print_logs=print_logs\n",
+    "        )\n",
+    "        return bets_df\n",
     "\n",
-    "# Link widgets to the simulation function\n",
-    "out = widgets.interactive_output(run_simulation, {\n",
-    "    'min_ev': min_ev_slider,\n",
-    "    'max_ev': max_ev_slider,\n",
-    "    'bet_amount': bet_amount_slider,\n",
-    "    'game_max': game_max_slider,\n",
-    "    'min_samplesize': min_samplesize_slider,\n",
-    "    'max_samplesize': max_samplesize_slider,\n",
-    "    'initial_bankroll': initial_bankroll_slider,\n",
-    "    'cooldown': cooldown_slider,\n",
-    "    'handicap_range': handicap_range_slider,\n",
-    "    'pregame_spread_range': pregame_spread_range_slider,\n",
-    "    'score_diff_range': score_diff_range_slider,\n",
-    "    'time_left_range': time_left_range_slider,\n",
-    "    'sample_size': sample_size_slider,\n",
-    "    'random_state': random_state_slider,\n",
-    "    'q2': q2_toggle,\n",
-    "    'q4': q4_toggle,\n",
-    "    'print_logs': print_logs\n",
-    "})\n",
+    "# Function to be called when the button is clicked\n",
+    "def on_run_button_clicked(b):\n",
+    "    # Capture the current state of the sliders\n",
+    "    params = {\n",
+    "        'min_ev': min_ev_slider.value,\n",
+    "        'max_ev': max_ev_slider.value,\n",
+    "        'bet_amount': bet_amount_slider.value,\n",
+    "        'game_max': game_max_slider.value,\n",
+    "        'min_samplesize': min_samplesize_slider.value,\n",
+    "        'max_samplesize': max_samplesize_slider.value,\n",
+    "        'initial_bankroll': initial_bankroll_slider.value,\n",
+    "        'cooldown': cooldown_slider.value,\n",
+    "        'handicap_range': handicap_range_slider.value,\n",
+    "        'pregame_spread_range': pregame_spread_range_slider.value,\n",
+    "        'score_diff_range': score_diff_range_slider.value,\n",
+    "        'time_left_range': time_left_range_slider.value,\n",
+    "        'sample_size': sample_size_slider.value,\n",
+    "        'random_state': random_state_slider.value,\n",
+    "        'q2': q2_toggle.value,\n",
+    "        'q4': q4_toggle.value,\n",
+    "        'print_logs': print_logs.value\n",
+    "    }\n",
+    "    # Run the simulation with the current parameters\n",
+    "    run_simulation(**params)\n",
+    "\n",
+    "# Bind the button to the callback function\n",
+    "run_button.on_click(on_run_button_clicked)\n",
     "\n",
     "# Arrange and display the UI components\n",
     "ui = widgets.VBox([\n",
@@ -615,11 +623,13 @@
     "    random_state_slider,\n",
     "    q2_toggle,\n",
     "    q4_toggle,\n",
-    "    print_logs\n",
+    "    print_logs,\n",
+    "    run_button,\n",
+    "    output  # Output area to display simulation results\n",
     "])\n",
     "\n",
     "# Display the widgets and output\n",
-    "display(ui, out)\n"
+    "display(ui)\n"
    ]
   }
  ],
