results include overtime now which makes winrates different

--- a/handicap_backtester.ipynb
+++ b/handicap_backtester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
     "            continue\n",
     "\n",
     "        if row['Type'] == \"handicap_odds_q4\" and q4:\n",
-    "            score_diff = row['Q4 score difference']+row['H1 score difference']\n",
+    "            score_diff = row['home_team_score']-row['away_team_score']\n",
     "\n",
     "        elif row['Type'] == \"handicap_odds_q2\" and q2:\n",
     "            score_diff = row['H1 score difference']\n",
@@ -165,7 +165,7 @@
     "\n",
     "            if cumulative_bets[game_key] + bet_amount <= game_max:\n",
     "                if score_diff + handicap > 0:\n",
-    "                    profit = bet_amount * (row['Home Odds']) * 1.04\n",
+    "                    profit = bet_amount * (row['Home Odds']) * 1.015\n",
     "                    outcome = 'Win'\n",
     "                    win += 1\n",
     "                elif score_diff + handicap == 0:\n",
@@ -224,7 +224,7 @@
     "\n",
     "            if cumulative_bets[game_key] + bet_amount <= game_max:\n",
     "                if score_diff + handicap > 0:\n",
-    "                    profit = bet_amount * (row['Away Odds']) * 1.04\n",
+    "                    profit = bet_amount * (row['Away Odds']) * 1.015\n",
     "                    outcome = 'Win'\n",
     "                    win += 1\n",
     "                elif score_diff + handicap == 0:\n",
@@ -324,13 +324,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74652fd341db4bf680b33566305e97fb",
+       "model_id": "e1a5a4a26de140f797ee94b0f17d0f18",
        "version_major": 2,
        "version_minor": 0
       },
