--- a/total_backtester.ipynb
+++ b/total_backtester.ipynb
@@ -18,7 +18,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "odds_df=pd.read_csv(\"cleaned_all_total.csv\")\n"
+    "import gdown\n",
+    "import pandas as pd\n",
+    "\n",
+    "# File ID from Google Drive\n",
+    "file_id = '1eJfCer2tdxDrgINTxhtDk8i4mrJh3ZO7'  # Replace with your actual file ID\n",
+    "\n",
+    "# Direct download URL\n",
+    "direct_link = f'https://drive.google.com/uc?id={file_id}&export=download'\n",
+    "\n",
+    "# Output filename\n",
+    "filename = 'cleaned_all_total.csv'  # Name the file as you wish\n",
+    "\n",
+    "\n",
+    "# Check if the file exists locally\n",
+    "if not os.path.exists(filename):\n",
+    "    print(f\"File '{filename}' not found locally. Downloading from Google Drive...\")\n",
+    "    \n",
+    "    # Download the file using gdown\n",
+    "    gdown.download(direct_link, filename, quiet=False)\n",
+    "else:\n",
+    "    \n",
+    "    print(f\"File '{filename}' already exists locally.\")\n",
+    "    \n",
+    "# Load the CSV into a DataFrame\n",
+    "odds_df = pd.read_csv(filename)\n",
+    "\n",
+    "# Display the first few rows to verify\n",
+    "#print(odds_df.head())\n"
    ]
   },
   {
